# documentum

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  documentum-workflow-management.docx  pyproject.toml
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.2-MILESTONE-AUDIT-2.md  v1.2-MILESTONE-AUDIT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 3efa9fa4be2a_add_triggertype_enum_and_method_name_.py  a1b2c3d4e5f6_add_activity_state_enum_and_execution_tokens.py  phase10_001_delegation_queues.py  phase11_001_dashboard_metrics.py  phase16_001_events_notifications.py  phase17_001_timer_escalation.py  phase18_001_sub_workflows.py  phase19_001_event_activities.py  phase20_001_renditions.py  phase21_001_virtual_documents.py  phase22_001_retention.py  phase23_001_digital_signatures.py  (+2 more)
frontend/: package-lock.json  package.json
scripts/: seed_contract_approval.py
tests/: conftest.py  test_acl.py  test_aliases.py  test_audit.py  test_auth.py  test_auto_activities.py  test_contract_approval.py  test_dashboard.py  test_documents.py  test_event_activities.py  test_expression_evaluator.py  test_groups.py  test_health.py  test_inbox.py  test_integration_api.py  test_lifecycle.py  test_models.py  test_query.py  test_reject_flows.py  test_retention.py  test_roles.py  test_routing.py  test_sequential.py  test_signatures.py  test_sub_workflows.py  test_templates.py  test_users.py  test_workflows.py
(+477 files in other folders)
